everest tag scan added

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Samsung EDM Links",
   "version": "1.0",
   "description": "Check link relevance for different markets",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "tabs"],
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js"],
@@ -14,7 +14,7 @@
     "default_icon": {
       "16": "icon16.png",
       "48": "icon48.png",
-      "128": "/icon128.png"
+      "128": "icon128.png"
     }
   },
   "icons": {
