--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,30 @@
 {
-  "manifest_version": 2,
-  "name": "Samsung EDM Links",
-  "version": "1.0",
-  "description": "Check link relevance for different markets",
-  "permissions": ["activeTab", "tabs"],
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"],
-    "css": ["styles.css"]
-  }],
-  "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
+    "manifest_version": 2,
+    "name": "Samsung EDM Links",
+    "version": "1.0",
+    "description": "Check link relevance for different markets",
+    "permissions": ["activeTab", "tabs","storage"],
+    "content_scripts": [{
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "css": ["styles.css"]
+    }],
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+    "browser_action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+      }
+    },
+    "icons": {
       "16": "icon16.png",
       "48": "icon48.png",
       "128": "icon128.png"
     }
-  },
-  "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
   }
-}
+  
